[package]
name = "yoshi"
version = "0.0.1"
authors = ["gnonpi <legnonpi@gmail.com>"]
edition = "2018"
description = "Build complex pipelines of batch jobs - inspired by Python's Luigi"
repository = "https://github.com/Gnonpi/yoshi"
documentation = "https://github.com/Gnonpi/yoshi"  # todo: change to hosted docs
readme = "README.md"

[badges]
# add crates.io badges

[dependencies]
# improved datetime
chrono = "0.4"
# pass and clone dynamic traits
dyn-clone = "1.0.2"
# logging
log = "0.4.0"
env_logger = "0.7.1"
# unique identifiers
uuid = { version = "0.8", features = ["serde", "v4"] }
# graph data structure
petgraph = "0.5.1"

[lib]
name = "yoshi"
path = "src/lib.rs"
crate-type = ["lib"]
edition = "2018"
test = true
doctest = true
bench = true
doc = true
